--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <title>Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,14 +24,14 @@
       <img src="./images/image-victor.jpg" alt="profile images">
     </div>
     <div class="profile-card-bottom">
-      <div class="datos-profile">
+      <div class="profile-card-bottom_datos-profile">
         <div>
           <span>Victor Crest</span>
           <span>26</span>
         </div>
         <p>London</p>
       </div>
-      <div class="datos-seguidores">
+      <div class="profile-card-bottom_datos-seguidores">
         <div>
           <p>80K</p>
           <p>Followers</p>
